--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -28,13 +28,19 @@ input{
     border: none;
 }
 
-button{
+.sign-up button{
     align-self: center;
     color:rgb(56, 54, 54);
+    padding: 0.5rem 1rem 0.5rem 1rem ;
+    border-radius: 10px;
+    font-size: 1.5rem;
     margin-top: 10px;
+    border: none;
+    cursor: pointer;
     font-weight: bold;
-
 }
+
+
 
 .errors,.user-created-success{
     margin-top: .5em;
