--- a/src/components/StartScreen/StartScreen.css
+++ b/src/components/StartScreen/StartScreen.css
@@ -33,3 +33,11 @@
     color:white
 
 }
+
+
+@media (max-width: 1119.98px) {
+    .container{
+        padding: 0 50px 20px 50px;
+    }
+    
+    }
