--- a/src/components/UserStats/UserStats.css
+++ b/src/components/UserStats/UserStats.css
@@ -1,29 +1,34 @@
-.user-stats{
-    display: flex;
-    /* margin-top: 10%; */
-    height: 100vh;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.user-stats {
+  display: flex;
+  /* margin-top: 10%; */
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.user-stats__body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 30%;
-    width: 30%;
-    padding:2rem;
-    background:rgb(137, 143, 57) ;
-    font-size: 2rem;
-    box-shadow: -2px 2px 5px 2px rgb(122, 122, 111);
-    color: white;
-    border-radius: 10px;
-    font-weight: bold;
+.user-stats__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 30%;
+  width: 30%;
+  padding: 2rem;
+  background: rgb(137, 143, 57);
+  font-size: 2rem;
+  box-shadow: -2px 2px 5px 2px rgb(122, 122, 111);
+  color: white;
+  border-radius: 10px;
+  font-weight: bold;
 }
 
+.user-stats__body p:nth-child(n):not(:nth-child(1)) {
+  margin-top: 2rem;
+}
 
-.user-stats__body p:nth-child(n):not(:nth-child(1)){
-    margin-top: 2rem;
+@media (max-width: 900px) {
+  .user-stats__body {
+    width: 90%;
+  }
 }
